# AAI-bootcamp

./: .gitignore  main.py  pyproject.toml
student/: chap01.ipynb  chap03.ipynb  chap04.ipynb  chap05.ipynb
student/C1/: ceasar_cipher_problem.ipynb  chap02.ipynb  chap04.ipynb  chap05.ipynb  chap07.ipynb  chap09.ipynb  chap10.ipynb  chap14.ipynb  chap15.ipynb  chap16.ipynb  docs_random_problem.ipynb  indexing_problems.ipynb  requests_ex.ipynb
student/C2/M1/: Johnsnow.ipynb
student/C2/M2/: Chipotle.ipynb  Occupation.ipynb  World-Food-Facts.ipynb
student/C2/M2/Filtering-and-Sorting-Data/: Chipotle.ipynb  Euro12.ipynb  Fictional-Army.ipynb
student/C2/M2/Getting-to-Know-your-Data/: Chipotle.ipynb  World-Food-Facts.ipynb
student/C2/M2/Group-By/: Alcohol-Consumption.ipynb  Occupation.ipynb  Regiment.ipynb
student/C2/M3/: m3-1_exercise.ipynb  m3-2_exercise.ipynb  viz_exercises.ipynb
student/C2/M4/: Presentation.ipynb  hypothesis_ex.ipynb
student/C3/M1/: ex1_reg.ipynb  ex2_reg.ipynb  ex3_class.ipynb  ex4_non-linear.ipynb
student/C3/M2/: ex1_multi-reg.ipynb  ex2_multi-reg.ipynb
student/C4/M2/: ex1_docling.ipynb
student/C4/M2/A/: 2206.01062.json
student/C4/M2/Multi_format/: 2206.01062.json  2206.01062.md  2206.01062.yaml  2305.03393v1-pg9-img.yaml  lorem_ipsum.json  powerpoint_sample.yaml  test_01.json  test_01.yaml  wiki_duck.json  wiki_duck.yaml  word_sample.json  word_sample.yaml
student/C4/M2/batch/: 2203.01017v2.doctags.txt  2203.01017v2.html  2203.01017v2.md  2305.03393v1.json  redp5110_sampled.html  redp5110_sampled.json
